# pyserde-timedelta

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple.py
serde_timedelta/: __init__.py
